add search-bar & optimize mobile device view

--- a/_config.yml
+++ b/_config.yml
@@ -13,6 +13,7 @@ top_saying:
 - title: GLAD TO SEE U, WELCOME TO YANGZJ1992 &#39;S BLOG.  
 - content: 每一个不曾起舞的日子都是对生命的辜负 —— 尼采 《查拉图斯特拉如是说》
 bottom_saying:  奇迹每天都在发生 (Miracles happen every day) —— 《阿甘正传》
+theme_pics_server: http://7bv937.com1.z0.glb.clouddn.com/qcyoung/
 # Content
 excerpt_link: Read More
 
