feat: optimize code

--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "url": "git+https://github.com/yangzj1992/TKL-REVISION.git"
   },
   "author": "yangzj1992",
-  "license": "ISC",
+  "license": "MIT",
   "bugs": {
     "url": "https://github.com/yangzj1992/TKL-REVISION/issues"
   },
