--- a/_config.yml
+++ b/_config.yml
@@ -52,10 +52,14 @@ links:
 - name: Kieran
   link: http://go.kieran.top/
 
+#Project
+projects:
+- name: 掘金翻译计划
+  link: https://github.com/xitu/gold-miner/wiki/%E8%AF%91%E8%80%85%E7%A7%AF%E5%88%86%E8%A1%A8#user-content-译者yangzj1992-总积分2
+# - name: Resume
+  # link: http://qcyoung.com/project/resume
+
 #Analytics
 cnzz: true  
 cnzzaccount: 1000263347
-
-img_server: 
-
 
