--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -1,4 +1,9 @@
 extends: airbnb
 installedESLint: true
+parserOptions:
+  ecmaVersion: 5
+env:
+  browser: true
+  jquery: true
 plugins:
   - jquery
