feat: sidebar img lazyload & code optimization

--- a/_config.yml
+++ b/_config.yml
@@ -56,6 +56,8 @@ links:
 projects:
 - name: 掘金翻译计划
   link: https://github.com/xitu/gold-miner/wiki/%E8%AF%91%E8%80%85%E7%A7%AF%E5%88%86%E8%A1%A8
+- name: 众成翻译
+  link: http://zcfy.cc/@yangzj1992
 # - name: Resume
   # link: http://qcyoung.com/project/resume
 
