feat: add throttle function

--- a/_config.yml
+++ b/_config.yml
@@ -53,7 +53,7 @@ links:
   description: First Job
 - name: Kieran
   link: http://go.kieran.top/
-  description: 主题原创者
+  description: 最初主题原创者
 
 #Project
 projects:
