feat: css seperation

--- a/_config.yml
+++ b/_config.yml
@@ -54,6 +54,9 @@ links:
 - name: Kieran
   link: http://go.kieran.top/
   description: 最初主题原创者
+- name: Xcat Liu
+  link: http://blog.xcatliu.com/
+  description: A cat who writes code
 
 #Project
 projects:
