--- a/_config.yml
+++ b/_config.yml
@@ -45,6 +45,17 @@ Baidu: http://www.baidu.com/p/yangzj1992
 
 #Links
 links:
+- name: Contributions
+  link: https://opensourcecontributo.rs/user/yangzj1992
+  description: GitHub contributions
+- name: Links
+  link: http://qcyoung.com/links
+  description: Friend Sites
+- name: Life
+  link: http://qcyoung.com/categories/%E6%88%91%E7%9A%84%E7%94%9F%E6%B4%BB/
+  description: Work life
+
+friendlinks:
 - name: USTB
   link: http://www.ustb.edu.cn/
   description: 我的大学
