feat: webfont & style change

--- a/_config.yml
+++ b/_config.yml
@@ -74,6 +74,9 @@ friendlinks:
 - name: 寿百年
   link: http://www.pddjs.com/
   description: pddjs
+- name: 朱嘉伟
+  link: http://buzhundong.com/
+  description: 单曲循环 | ΒΙΟG
 
 #Project
 projects:
