--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "TKL-REVISION is a responsive design theme for Hexo. It's was based on TKL and reference some Next features.(It's still not good for other to use it, if u don't mind it, u can try to use this theme)",
   "main": "index.js",
   "scripts": {
+    "dev": "webpack --profile --display-error-details --colors --watch",
+    "build": "export NODE_ENV=prod&&webpack --profile --display-error-details --colors",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -17,12 +19,33 @@
   },
   "homepage": "https://github.com/yangzj1992/TKL-REVISION#readme",
   "devDependencies": {
+    "babel-core": "^6.23.1",
+    "babel-loader": "^6.3.2",
+    "babel-plugin-syntax-dynamic-import": "^6.18.0",
+    "babel-plugin-transform-object-rest-spread": "^6.23.0",
+    "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-preset-es2015": "^6.22.0",
+    "css-loader": "^0.26.1",
     "cz-conventional-changelog": "^1.1.6",
+    "ejs-compiled-loader": "^1.1.0",
+    "ejs-loader": "^0.3.0",
+    "ejs-render-loader": "^1.0.0",
     "eslint": "^2.9.0",
     "eslint-config-airbnb": "^8.0.0",
     "eslint-plugin-import": "^1.6.1",
     "eslint-plugin-jsx-a11y": "^1.0.4",
-    "eslint-plugin-react": "^5.0.1"
+    "eslint-plugin-react": "^5.0.1",
+    "extract-text-webpack-plugin": "^2.0.0-rc.3",
+    "file-loader": "^0.10.0",
+    "html-webpack-plugin": "^2.28.0",
+    "image-loader": "0.0.1",
+    "node-sass": "^4.5.0",
+    "raw-loader": "^0.5.1",
+    "sass-loader": "^6.0.2",
+    "style-loader": "^0.13.1",
+    "stylus-loader": "^2.5.0",
+    "url-loader": "^0.5.7",
+    "webpack": "^2.2.1"
   },
   "config": {
     "commitizen": {
