--- a/_config.yml
+++ b/_config.yml
@@ -6,13 +6,13 @@ language: zh-Hans
 email: yangzj1992@qq.com #联系邮箱
 url: http://www.qcyoung.com
 
-logo: http://qcyoung.qiniudn.com/qcyoung/TKL/logo.png
-logoc: http://qcyoung.qiniudn.com/qcyoung/TKL/oursbrun.png
+logo: https://yangzj1992-1251901721.cos.ap-beijing.myqcloud.com/images/TKL/logo.png
+logoc: https://yangzj1992-1251901721.cos.ap-beijing.myqcloud.com/images/TKL/oursbrun.png
 top_saying:
 - title: GLAD TO SEE U, WELCOME TO YANGZJ1992 &#39;S BLOG.
 - content: 每一个不曾起舞的日子都是对生命的辜负 —— 尼采 《查拉图斯特拉如是说》
 bottom_saying:  奇迹每天都在发生 (Miracles happen every day) —— 《阿甘正传》
-theme_pics_server: http://qcyoung.qiniudn.com/qcyoung/
+theme_pics_server: https://yangzj1992-1251901721.cos.ap-beijing.myqcloud.com/images/
 # Content
 excerpt_link: Read More
 
